@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-17
+2013-03-22 Andy Salnikov
+- DdlHdf5DataHelpers: for method return type use method type and not 
+  attribute type
+
 Tag: V00-05-16
 2013-03-22 Andy Salnikov
 - hdf5 schema can specify shape of the attribute, this is mostly useful
